<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Tela home-->
    <string name="app_name">Projeto PI -TrackTracker</string>
    <string name="appTxtTHomeMotorista">MOTORISTA</string>
    <string name="appTxtTHomePassageiro">PASSAGEIRO</string>

    <!--Tela login-->
    <string name="appBtnSeguinte">SEGUINTE</string>
    <string name="appBtnLogin">LOGIN</string>
    <string name="appTxtCadastro">Não possui conta? Cadastre-se já!</string>
    <string name="appTxtHintEmail">E-mail</string>
    <string name="appTxtHintSenha">Senha</string>

    <!--Tela de cadastro-->
    <string name="appTxtTituloMoto">CADASTRO MOTORISTA</string>
    <string name="appTxtTituloPass">CADASTRO PASSAGEIRO</string>
    <string name="appTxtSubTitulo1">1. Informações pessoais</string>
    <string name="appTxtSubTitulo2">2. Informações do carro</string>
    <string name="appTxtSubTitulo3Pass">2. Criação de senha</string>
    <string name="appTxtSubTitulo3Moto">3. Criação de senha</string>
    <string name="appTxtSubTitulo4Moto">4. Foto de perfil</string>
    <string name="appTxtSubTitulo4Pass">3. Foto de perfil</string>

    <string name="appTxtHintNome">Nome</string>
    <string name="appTxtHintSobrenome">Sobrenome</string>
    <string name="appTxtHintCpf">CPF</string>
    <string name="appTxtHintDataNasc">Data de Nascimento</string>
    <string name="appTxtHintTel">Telefone</string>
    <string name="appTxtHintEndereco">Endereço (Bairro, Rua - número)</string>

    <string name="appTxtHintCnh">CNH</string>
    <string name="appTxtHintMarca">Marca</string>
    <string name="appTxtHintModelo">Modelo</string>
    <string name="appTxtHintAno">Ano do carro</string>
    <string name="appTxtHintPlaca">Placa</string>
    <string name="appTxtHintCategoria">Categoria do veículo(Executive, Comfort, Black)</string>

    <string name="appTxtHintCrieSenha">Crie uma senha</string>
    <string name="appTxtHintConfirmaSenha">Confirme sua senha</string>

    <string name="appBtnTirarFoto">Tire uma foto</string>
    <string name="appBtnEscolherFoto">Escolha uma foto</string>

    <!--Home motorista-->
    <string name="appTxtStatusOf">Você está offline</string>
    <string name="appTxtStatusOn">Você está online</string>
    <string name="appBtnIniciar">Iniciar</string>
    <string name="appTxtDinheiroDefault">---</string>
</resources>