<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinzaClaro"
    tools:context=".CadastroMotoPessoal">

    <ImageView
        android:id="@+id/imgSetaVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/iconarrow" />

    <TextView
        android:id="@+id/txtTituloCadastroMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTxtTituloMoto"
        android:textSize="30sp"
        android:fontFamily="@font/inter_18pt_black"
        android:textColor="@color/preto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/txtSubtituloCadastroMoto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_18pt_black"
        android:text="@string/appTxtSubTitulo1"
        android:textSize="23sp"
        android:textColor="@color/preto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="415dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/caixa_edit_text"
                android:ems="10"
                android:hint="@string/appTxtHintNome"
                android:inputType="text"
                android:padding="12dp" />

            <EditText
                android:id="@+id/etSobrenome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/caixa_edit_text"
                android:ems="10"
                android:hint="@string/appTxtHintSobrenome"
                android:inputType="text"
                android:padding="12dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/etCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/caixa_edit_text"
            android:ems="10"
            android:hint="@string/appTxtHintCpf"
            android:inputType="text"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/caixa_edit_text"
            android:ems="10"
            android:hint="@string/appTxtHintDataNasc"
            android:inputType="text"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/caixa_edit_text"
            android:ems="10"
            android:hint="@string/appTxtHintEmail"
            android:inputType="text"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/caixa_edit_text"
            android:ems="10"
            android:hint="@string/appTxtHintTel"
            android:inputType="phone"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/caixa_edit_text"
            android:ems="10"
            android:hint="@string/appTxtHintEndereco"
            android:inputType="text"
            android:padding="12dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSeguinte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/cinzaEscuro"
        android:fontFamily="@font/inter_18pt_black"
        android:text="@string/appBtnSeguinte"
        android:textColor="@color/branco"
        android:textSize="25sp"
        android:onClick="seguinteCarro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>