<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinzaClaro"
    tools:context=".CadastroPassPessoal">

    <ImageView
        android:id="@+id/imgSetaVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="voltar"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/iconarrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CADASTRO PASSAGEIRO"
        android:textSize="30sp"
        android:textColor="@color/preto"
        android:fontFamily="@font/inter_18pt_black"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imgSetaVoltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1. Informações pessoais"
        android:textSize="23sp"
        android:textColor="@color/preto"
        android:fontFamily="@font/inter_18pt_black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSubtitulo">

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_edit_text"
            android:hint="@string/appTxtHintNome"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_edit_text"
            android:hint="@string/appTxtHintSobrenome"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_edit_text"
            android:hint="@string/appTxtHintCpf"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_edit_text"
            android:hint="@string/appTxtHintDataNasc"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_edit_text"
            android:hint="@string/appTxtHintEmail"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_edit_text"
            android:hint="@string/appTxtHintTel"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_edit_text"
            android:hint="@string/appTxtHintEndereco"
            android:padding="12dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSeguinte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/cinzaEscuro"
        android:fontFamily="@font/inter_18pt_black"
        android:onClick="seguinteSenha"
        android:text="@string/appBtnSeguinte"
        android:textColor="@color/branco"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>
