<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinzaClaro"
    tools:context=".CadastroPassSenha">

    <ImageView
        android:id="@+id/imgSetaVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="voltar"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/iconarrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CADASTRO PASSAGEIRO"
        android:textSize="30sp"
        android:textColor="@color/preto"
        android:fontFamily="@font/inter_18pt_black"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imgSetaVoltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2. Criação de senha"
        android:textSize="23sp"
        android:textColor="@color/preto"
        android:fontFamily="@font/inter_18pt_black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/formSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/txtSubtitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/appTxtHintCrieSenha"
            android:background="@drawable/caixa_edit_text"
            android:padding="12dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/appTxtHintConfirmaSenha"
            android:background="@drawable/caixa_edit_text"
            android:padding="12dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSeguinte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/appBtnSeguinte"
        android:textColor="@color/branco"
        android:textSize="25sp"
        android:backgroundTint="@color/cinzaEscuro"
        android:fontFamily="@font/inter_18pt_black"
        android:onClick="seguinteFoto"
        app:layout_constraintTop_toBottomOf="@+id/formSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
